@@ -28,3 +28,4 @@ src/sndfile-generate-chirp
 src/sndfile-mix-to-mono
 src/sndfile-spectrogram
 src/stamp-h1
+src/sndfile-merge
